代码规约处理